--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     var senha = document.getElementById('senha').value;
    }
    if(login =="jose"&& senha =="boy"){
-    alert('login com sucesso')
+    alert('login com sucesso');
     windows.location="logado.html";
    }
 else{
