--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   
 <script>
    function logar(){
-    var login = document.getElementById('email').value;
+    var login = document.getElementById('Email').value;
     var senha = document.getElementById('senha').value;
    }
    if(login =="jose"&& senha =="boy"){
