--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
    }
    if(login =="jose"&& senha =="boy"){
     alert('login com sucesso');
-    windows.location="logado.html";
+    windows.location="inicio.html";
    }
 else{
     alert('erro ao logar')
