--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     var login = document.getElementById('Email').value;
     var senha = document.getElementById('senha').value;
    }
-   if(login =="jose"&& senha =="boy"){
-    alert('login com sucesso');
+   if(login =="jose" && senha =="boy"){
+    alert('login com sucesso')
     windows.location="inicio.html";
    }
 else{
