--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     var senha = document.getElementById('senha').value;
 }
    if(login =="jose@gmail.com" && senha =="boy"){
-    alert('login com sucesso')
+    alert("login com sucesso");
     windows.location ="inicio.html";
 }
 else{
