--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
    <form>
     <input type="email" placeholder="email" id="email">
     <input type="password" placeholder="senha" id="senha">
-    <input type="submit" onclick="logar(); return false">
+    <input type="submit" onclick="logar(); return false" name="enviar">
    </form>
   
 <script>
